# nyaos

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.MD  compile.bat  make.sh  start-vm.bat  start-vm.sh  start.bat  start.sh  x86_64-nyaos-none.json
.cargo/: config.toml
asm-src/: main.asm  main64.asm  multiboot.asm
build-tools/: make.sh
src/: allocator.rs  allocators.rs  disk.rs  framebuffers.rs  init.rs  lib.rs  linker.ld  main.rs  mem.rs  net.rs  sh.rs  test.rs
src/allocator/: fixed_block_allocator.rs
src/applications/: mod.rs
src/fs/: mod.rs
src/io/: mod.rs  serial.rs  stdin.rs  stdout.rs
src/memory/: allocator.rs  mod.rs
src/memory/allocator/: bump.rs  fixed_size_block.rs
src/task/: executor.rs  keyboard.rs  mod.rs
src/test/: box_alloc.rs
src/x86/: gdt.rs  interrupts.rs  mod.rs
targets/x86_64/: linker.ld
targets/x86_64/iso/boot/grub/: grub.cfg
